[metadata]
name = composition_stats
version = 1.1.0
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = compositional data analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_file = LICENSE.txt
url = https://github.com/ntessore/composition_stats
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
packages = find:

[options.extras_require]
test =
    pytest
docs =
    numpydoc

[tool:pytest]
addopts = --doctest-modules
